--- a/docs/AI_workshop_finance.qmd
+++ b/docs/AI_workshop_finance.qmd
@@ -43,7 +43,7 @@ This condensed yet intensive workshop is designed to empower employees from key 
 
 ### Q&A Session: 11:00 AM - 11:15 AM
 
-### Session 2:  AM -  PM
+### Session 2:  11:15 AM -  01:00 PM
 
 **Tailored Content to Specific Roles:**  
    - Customize scenarios based on participant roles (e.g., budget analysts, tax policy experts, debt managers). 
@@ -64,9 +64,9 @@ This condensed yet intensive workshop is designed to empower employees from key 
    - Utilize AI tools for advanced analysis, such as economic modeling and data visualization.
    - **Advanced Analysis:** Forecast the impact of fiscal policy changes on long-term economic growth.
 
-### Prayer Break: :00 PM - :00 PM
+### Prayer Break: 01:00 PM - 02:00 PM
 
-### Session 3: :00 PM -  PM
+### Session 3: 02:00 PM - 04:30 PM
 
 
 **Integrating AI into Economic Planning Processes and Practical Application**
@@ -83,7 +83,7 @@ This condensed yet intensive workshop is designed to empower employees from key 
    - Provide instant feedback on exercises using AI tools.
    - Encourage participants to document insights and findings for future reference.
 
-### Wrap-Up and Closing Remarks: 3:30 PM - 3:45 PM
+### Wrap-Up and Closing Remarks: 4:30 PM - 4:45 PM
 
 - **Summary and Reflection:**  
    Recap of key learnings and how AI can be integrated into economic planning.
